--- a/Services/Catalog/MultiShop.Catalog/MultiShop.Catalog.csproj
+++ b/Services/Catalog/MultiShop.Catalog/MultiShop.Catalog.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -17,7 +17,6 @@
   <ItemGroup>
     <Folder Include="Controllers\" />
     <Folder Include="Services\ProductImageServices\" />
-    <Folder Include="Services\ProductDetailServices\" />
   </ItemGroup>
 
 </Project>
