--- a/Services/Catalog/MultiShop.Catalog/appsettings.json
+++ b/Services/Catalog/MultiShop.Catalog/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "DataBaseSettings": {
+  "DatabaseSettings": {
     "CategoryCollectionName": "Categories",
     "ProductCollectionName": "Products",
     "ProductDetailCollectionName": "ProductDetails",
