--- a/Services/Order/Core/MultiShop.Order.Application/MultiShop.Order.Application.csproj
+++ b/Services/Order/Core/MultiShop.Order.Application/MultiShop.Order.Application.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Features\CQRS\Handlers\OrderDetailHandlers\" />
     <Folder Include="Features\Mediator\" />
   </ItemGroup>
 
